# raycasting-wolfenstein-3d

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.c.bak  ray.c
maps/: map_01
src/: algorithm.c  algorithm.h  colors.h  dda.c  dda.cpp  draw.cpp  engine.c  engine.cpp  engine.h  engine.hpp  main.c  main.cpp  main.h  map.c  map.h  math.c  math.h  texture.c  texture.h
tests/: ray.c
